Add docker compose file to perform integration tests with docker. refs #3

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     dynamodb:
         image: peopleperhour/dynamodb
     node:
-        image: looptribe/docker-node:4.3
+        image: node:6.10
         links:
             - dynamodb
         volumes:
